# fibis

./: Cargo.toml  README.md  flake.nix  makefile
bench_results/: m2.txt  ryzen_5800x.txt
benches/: bench.rs  vs_intset.rs
src/: lib.rs
