[package]
name = "fibis"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "fixed range bitset"
repository = "https://www.github.com/tbreslein/fibis.git"
readme = "README.md"
exclude = [ "./bench_results/*" ]

# these are merely used for benchmarks
[dev-dependencies]
criterion = "0.5.1"
integer-hasher = "0.1.1"
rand = "0.8.5"

[lib]
bench = false

[[bench]]
name = "bench"
harness = false
